# COMP3400_LA2

./: CMakeLists.txt  README.md  parta.c  parta.h  partc.c  partc.h  run.sh
src/: partb.c  partb.h
tests/: CMakeLists.txt  test_a.cpp  test_b.cpp  test_c.cpp
